# keryx-miner

./: .gitignore  Cargo.toml  PR_DESCRIPTION_UPDATE.md  README.md  build.rs
cuda/: README.md  pom_mine_legacy.fatbin  pom_mine_nextgen.fatbin
hiveos/: build-keryx-llama.sh
inference/: Cargo.toml
inference/src/: lib.rs
integrations/hiveos/: HIVEOS_README.md  h-config.sh  h-run.sh  h-stats.sh  h-stop.sh  pre-hive-upgrade.sh
plugins/cuda/: README.md
plugins/cuda/resources/: keryx-cuda-sm70.ptx  keryx-legacy.fatbin  keryx-nextgen.fatbin
plugins/cuda/src/: lib.rs  worker.rs
src/: cli.rs  gguf.rs  ipfs.rs  lib.rs  llama_engine.rs  logging.rs  main.rs  miner.rs  models.rs  pom.rs  pom_gpu.rs  pow.rs  quantized_qwen3_split.rs  slm.rs  stats.rs  ui.rs
src/client/: grpc.rs  stratum.rs
tools/keryx-llama/: keryx_llama.cpp
tools/llama_zerodup_spike/: spike.cpp
