[package]
name = "keryx-miner"
version = "0.3.7"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/keryx-labs/keryx-miner"
readme = "README.md"
description = "A fast CPU & GPU miner for Keryx"
categories = ["command-line-utilities"]
keywords = ["blockchain", "cli"]
include = [
    "src/**/*.rs",
    "src/**/*.s",
    "proto/**",
    "Cargo.toml",
    "Cargo.lock",
    "build.rs",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
]

[dependencies]
tonic = "0.8"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "signal"] }
prost = "0.11"
futures-util = "0.3"
tokio-stream = {version = "0.1", features = ["net"]}
once_cell = "1"
num_cpus = "1"
rand = "0.8"
blake2b_simd = "1.0.0"
clap = { version = "3.0", features = ["color", "derive"]}
log = "0.4"
env_logger = "0.9"
crossterm = "0.28"
keccak = { version = "0.1", optional = true }
parking = { package = "parking_lot", version = "0.12", optional = true }
libloading = "0.7"
tokio-util = {version = "0.7.0", features = ["codec"]}
serde_json = "1.0"
serde_repr = "0.1"
serde =  {version="1.0", features=["derive"]}
futures = "0.3.21"
bytes = "1.1.0"
async-trait = "0.1"
num = "0.4"
nix = "0.25"
hex = "0.4"
keryx-inference = { path = "inference" }
secp256k1 = { version = "0.29.0", features = ["global-context"] }
semver = "1.0"
# Proof-of-Model: possession proof construction (borsh wire-format must match the node).
borsh = { version = "1", features = ["derive"] }
blake3 = "1"
# PoM GPU plumbing (context/stream/module/memcpy for the walk kernel). Inference itself runs
# in the dlopen'd libkeryx-llama.so (see llama_engine) — no ML framework in the binary.
cudarc = { version = "0.19", default-features = false, features = ["std", "driver", "cuda-version-from-build-system", "dynamic-linking"] }
ureq = { version = "2", features = ["tls"] }
base64 = "0.22"
anyhow = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
flate2 = "1.0"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = ["parking_lot"]
parking_lot = ["parking", "tokio/parking_lot"]
bench = []
no-asm = ["keccak"]

[target.'cfg(target_os = "windows")'.dependencies]
keccak = "0.1"
kernel32-sys = "0.2"
win32console = "0.1"

[profile.release]
lto = true
codegen-units = 1

[build-dependencies]
tonic-build = { version = "0.8", default-features = false, features = ["prost", "transport"] }
cc = "1"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
sha3 = { git = "https://github.com/elichai/hashes", branch = "cSHAKE" }

[workspace]
members = ["inference", "plugins/*"]
default-members = [".", "plugins/cuda", "plugins/opencl"]
